--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^8.4.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^1.6.2"
   }
 }
